# LogicEngine

./: CMakeLists.txt  README.md  build.bat  logic.h  logic_manager.h  main.cpp
comp/: CMakeLists.txt  comp.cpp
components/bus/: CMakeLists.txt  bus.cpp
components/file/: CMakeLists.txt  file.cpp
components/lua/: CMakeLists.txt  build.bat  lua.cpp  lua_engine.cc  lua_engine.h
components/lua/lua/: CMakeLists.txt
interface/: bus.h  component.h  gebo.h  gebo_bus.h  gebo_comps.h  gebo_file.h  gebo_lua.h  interface.h  本地磁盘 (E) - 快捷方式.lnk
launcher/: CMakeLists.txt  launcher.cpp
src/: component.h  logic_engine.h
